--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,13 @@
+$fontfmily1 : "Gotham";
+$fontfamily2: "Montserrat";
+$fontfamily3:"Without You";
+$primaryColor:#FFFFFF;
+$secondaryColor:#FAD5A5;
+$tertiaryColor:#252C33;
+$textColor1:#F8F9FA;
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: $fontfmily1, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +15,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  // font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    // monospace;
+    font-family: $fontfmily1;
 }
