--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,7 +14,11 @@
     color: $textColor1;
     text-transform: uppercase;
   }
+  .logo{
+      margin-left:2rem;
+  }
   .pagesDesktop {
+
     a {
       margin: 0 0.5rem;
     }
@@ -24,6 +28,7 @@
   }
 
   .logSign-Desktop {
+      margin-right:2rem;
     a {
       margin: 0 0.5rem;
     }
