done with footer form

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,41 +1,129 @@
 @import "../Utils/config.scss";
 .footer-container {
-  background-color: $secondaryColor;
-  h4 {
-    color: $tertiaryColor;
-  }
-  a {
-    text-decoration: none;
-    color: $tertiaryColor;
-  }
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  row-gap: 1rem;
-  padding: 4rem 2rem;
-
-  @media (min-width: 850px) {
-    grid-template-columns: repeat(5, 1fr);
-  }
-  div {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    @media(min-width:850px){
-        text-align: left;
-
+    background: rgb(188,222,255);
+background: linear-gradient(181deg, rgba(188,222,255,1) 18%, rgba(255,229,194,1) 72%, rgba(250,213,165,1) 88%);
+    #headingStylish{
+        font-family: $fontfamily3;
+        font-size: clamp(1.5rem,6vw,3rem);
+        letter-spacing:0.2rem;
     }
-  }
-  .span-1 {
+    p,h4{
+        color:$tertiaryColor;
+    }
+    .form-footer{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+        .form-div{
+            position: relative;
+            button{
+                position: absolute;
+                top: -20px;
+                left: 47%;
+                border-radius: 2rem;
+                background-color: $tertiaryColor;
+                svg{
+                    fill:$secondaryColor;
+                }
+            }
+            
+                background-color: #FFFFFF;
+                padding:2rem 2rem;
+                border-radius:1rem;                
+                @media(min-width:450px){
+                    width:80%;
+                }
+                @media(min-width:600px){
+                    width:70%;
+                }
+                @media(min-width:768px){
+                    width:clamp(60%,10vw,600px);
+                }
+                h4{
+                    font-size: clamp(1.2rem,4vw,2rem);
+                    font-weight: 400;
+                }
+                form{
+                    display: grid;
+                    grid-template-columns: repeat(2,fr);
+                    gap:1rem;
+                    .MuiFormControl-root{
+                        width:100%;
+                    }
+                    .MuiFormLabel-root{
+                        text-align: left;
+                    }
+                    .MuiFormHelperText-root{
+                        font-weight: 200;
+                        color:hsl(240deg 8% 46% / 68%);
+                        margin-left: 0;
+                    }
+                    .span-1{
+                        grid-column: 1/3;
+                        @media(min-width:600px){
+                            grid-column:1/2;
+                        }
+                    }
+                    .span-2{
+                        grid-column: 1/3;
+                        @media(min-width:600px){
+                            grid-column:2/3;
+                        }
+                    }
+                    .span-3{
+                        grid-column: 1/3;
+                    }
+                    .span-4{
+                        grid-column: 1/3;
+                    }
+                    .span-5{
+                        grid-column: 1/3;
+                    }
+                    .span-6{
+                        grid-column: 1/3;
+                    }
+                }
+            
+        }
+    }
+    .linkSection{
+        h4 {
+          color: $tertiaryColor;
+        }
+        a {
+          text-decoration: none;
+          color: $tertiaryColor;
+        }
+        
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      row-gap: 1rem;
+      padding: 4rem 2rem;
+      @media (min-width: 850px) {
+        grid-template-columns: repeat(5, 1fr);
+      }
+      div {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        @media(min-width:850px){
+            text-align: left;
+    
+        }
+      }
+      
+      .span-1 {
     grid-column: 1/6;
     @media (min-width: 650px) {
       grid-column: 1/3;
       grid-row: 1/3;
     }
     @media (min-width: 850px) {
-      grid-column: 1/2;
-      grid-row: 1/4;
+        grid-column: 1/2;
+        grid-row: 1/4;
     }
-  }
+}
   .span-2 {
     grid-column: 1/6;
     @media (min-width: 650px) {
@@ -72,35 +160,36 @@
   .span-5 {
     grid-column: 1/6;
     @media (min-width: 650px) {
-      grid-column: 1/3;
-      grid-row: 5/7;
+        grid-column: 1/3;
+        grid-row: 5/7;
     }
     @media (min-width: 850px) {
-      grid-column: 5/6;
-      grid-row: 1/3;
+        grid-column: 5/6;
+        grid-row: 1/3;
     }
-  }
-  .span-6 {
+}
+.span-6 {
     grid-column: 1/6;
     
     @media (min-width: 650px) {
-      grid-column: 3/5;
-      grid-row: 5/7;
+        grid-column: 3/5;
+        grid-row: 5/7;
     }
     @media (min-width: 850px) {
-      grid-column: 5/6;
-      grid-row: 3/4;
+        grid-column: 5/6;
+        grid-row: 3/4;
     }
     a {
-      color: $tertiaryColor;
+        color: $tertiaryColor;
     }
-
+    
     .social-links {
-      flex-direction: row;
-      justify-content: center;
-      @media (min-width:850px) {
-          justify-content: flex-start;
-      }
+        flex-direction: row;
+        justify-content: center;
+        @media (min-width:850px) {
+            justify-content: flex-start;
+        }
     }
-  }
+}
+}
 }
