done with first part of the moto section

--- a/src/components/Utils/config.scss
+++ b/src/components/Utils/config.scss
@@ -6,5 +6,6 @@ $secondaryColor:#FAD5A5;
 $tertiaryColor:#252C33;
 $textColor1:#F8F9FA;
 $textColor2:#252C33;
+$textColorHeadings:#414042;
 
 /*  Font Families */
