--- a/src/components/Moto/Moto.scss
+++ b/src/components/Moto/Moto.scss
@@ -23,6 +23,9 @@
         grid-column: 2/3;
         grid-row: 1/3;
       }
+      @media (min-width: 1124px) {
+        grid-row: 1/4;
+      }
 
       h3 {
         font-family: "Without You";
@@ -46,10 +49,10 @@
         &:after {
           content: "";
           position: absolute;
-          top: 1vh;
-          left: 1vw;
-          width: 120px;
-          height: 167px;
+          top: 2vh;
+          left: 2vw;
+          width: 140px;
+          height: 30vh;
           border-radius: 0.7rem;
           background-color: #fad5a5;
         }
@@ -85,7 +88,7 @@
         font-family: $fontfamily2;
         color: #4140429c;
         font-weight: 100;
-        font-size: clamp(0.4rem, 2vw, 0.8rem);
+        font-size: clamp(0.4rem, 2vw, 1rem);
       }
     }
     .span-3 {
@@ -115,8 +118,65 @@
         font-family: $fontfamily2;
         color: #4140429c;
         font-weight: 100;
-        font-size: clamp(0.4rem, 2vw, 0.8rem);
+        font-size: clamp(0.4rem, 2vw, 1rem);
       }
     }
+  }
+  .WhatWeDo{
+    padding: 0 4rem;
+      h3{
+        font-family: "Without You";
+        font-size: clamp(1rem, 4vw, 2rem);
+        letter-spacing: 0.2rem;
+        color:#414042;
+      }
+      h2{
+          color:#414042;
+          text-align: center;
+      }
+      .center {
+        .slick-center{
+
+          img {
+            opacity: 1;
+            -ms-transform: scale(1.5);
+            transform: scale(1.5);
+          }
+        }
+        img {
+          opacity: .4;
+          transition: all .3s ease;
+        } 
+      }
+      .slider {
+        width: 80%;
+        margin: 100px auto;
+        }
+      .slick-slider{
+        .slick-list{
+          padding:0 0;
+        }
+        img{
+          width:80%;
+          margin:60px;
+        }
+        .slick-prev{
+          left:-45px;
+          &:before{
+            color: #414042;
+            font-size: 40px;
+          }
+        }
+        
+      
+      
+        .slick-next{
+          // right: 90px;
+          &:before{
+            color: #414042;
+            font-size: 40px;
+          }
+        }
+      }
   }
 }
