done with the landing page

--- a/src/components/Moto/Moto.scss
+++ b/src/components/Moto/Moto.scss
@@ -1,7 +1,7 @@
 @import "../Utils/config.scss";
 .moto-container {
   font-family: $fontfmily1;
-
+  background:#F8F9FA;
   .WhoWeAre {
     display: grid;
     grid-template-columns: 0.1fr 0.4fr 0.4fr 0.1fr;
@@ -12,12 +12,11 @@
       margin: 0 0;
     }
     .span-1 {
-        grid-column: 2/4;
+      grid-column: 2/4;
       position: relative;
       @media (min-width: 650px) {
-        
         grid-column: 2/3;
-      grid-row: 1/2;
+        grid-row: 1/2;
       }
       @media (min-width: 967px) {
         grid-column: 2/3;
@@ -35,6 +34,7 @@
         left: 45px;
         top: 10px;
         z-index: 10;
+        color: #414042;
         font-weight: lighter;
         margin: 0 0;
         @media (max-width: 650px) {
@@ -66,11 +66,10 @@
       }
     }
     .span-2 {
-      
       grid-column: 2/4;
       @media (min-width: 650px) {
         grid-column: 3/4;
-        grid-row: 1/2;  
+        grid-row: 1/2;
       }
       @media (min-width: 967px) {
         grid-column: 3/4;
@@ -122,61 +121,146 @@
       }
     }
   }
-  .WhatWeDo{
+  .WhatWeDo {
     padding: 0 4rem;
-      h3{
-        font-family: "Without You";
-        font-size: clamp(1rem, 4vw, 2rem);
-        letter-spacing: 0.2rem;
-        color:#414042;
+    margin: 2rem 0;
+    h3 {
+      font-family: "Without You";
+      font-size: clamp(1rem, 4vw, 2rem);
+      letter-spacing: 0.2rem;
+      color: #414042;
+    }
+    h2 {
+      color: #414042;
+      text-align: center;
+    }
+    .center {
+      .slick-center {
+        img {
+          opacity: 1;
+          -ms-transform: scale(1.5);
+          transform: scale(1.5);
+        }
       }
-      h2{
-          color:#414042;
-          text-align: center;
+      img {
+        opacity: 1;
+        transition: all 0.3s ease;
+        @media (min-width: 480px) {
+          opacity: 0.4;
+        }
       }
-      .center {
-        .slick-center{
+      @media (min-width: 480px) {
+      }
+    }
+    .slider {
+      width: 80%;
+      margin: 100px auto;
+    }
+    .slick-slider {
+      .slick-list {
+        padding: 0 0;
+      }
+      img {
+        width: 80%;
+        margin: 10px;
+        @media (min-width: 480px) {
+          margin: 60px;
+        }
+      }
+      .slick-prev {
+        left: -45px;
+      }
+      .slick-next {
+        right: -8px;
+      }
 
-          img {
-            opacity: 1;
-            -ms-transform: scale(1.5);
-            transform: scale(1.5);
+      .slick-next,
+      .slick-prev {
+        &:before {
+          font-family: ui-monospace;
+          color: white;
+          font-size: 20px;
+          background: #414042;
+          border-radius: 50%;
+          padding: 0.3rem;
+          @media (min-width: 768px) {
+            font-size: 26px;
+            padding: 0.6rem;
+          }
+          @media (min-width: 1024px) {
+            font-size: 32px;
+            padding: 0.8rem;
           }
         }
-        img {
-          opacity: .4;
-          transition: all .3s ease;
+      }
+    }
+  }
+  .letsColloborate {
+    padding: 2rem;
+    h3 {
+      font-family: "Without You";
+      font-size: clamp(1rem, 4vw, 2rem);
+      letter-spacing: 0.2rem;
+      color: #414042;
+    }
+    h2 {
+      color: #414042;
+      text-align: center;
+    }
+    .cards{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      @media (max-width:650px){
+        flex-direction: column;
+        justify-content: space-evenly;
+      }
+      .MuiCardActionArea-root{
+        display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      
+      @media (min-width:650px){
+        width: 160px;
+      }
+      @media (min-width:768px){
+        width: 220px;
+      }
+      @media (min-width:1024px){
+        width: 300px;
+      }
+    }
+    .MuiCard-root{
+      box-shadow: none;
+      background: inherit;
+      .MuiCardMedia-root{
+        border-radius: none;
+        object-position: center;
+        @media (min-width:650px){
+          height: 106px;
+        }
+        @media (min-width:768px){
+          height: 146px;
+          border-radius: 1rem;
+        }
+        @media (min-width:1024px){
+          height: 190px;
+          border-radius: 2rem;
         } 
       }
-      .slider {
-        width: 80%;
-        margin: 100px auto;
-        }
-      .slick-slider{
-        .slick-list{
-          padding:0 0;
-        }
-        img{
-          width:80%;
-          margin:60px;
-        }
-        .slick-prev{
-          left:-45px;
-          &:before{
-            color: #414042;
-            font-size: 40px;
-          }
-        }
-        
-      
-      
-        .slick-next{
-          // right: 90px;
-          &:before{
-            color: #414042;
-            font-size: 40px;
-          }
-        }
-      }
+    }
+    .MuiTypography-h5{
+      font-family: $fontfamily2;
+      font-size:clamp(1rem,2vw,2rem);
+      color:#414042;
+      font-weight: 500;
+    }
+    .MuiTypography-body2{
+      font-family: $fontfamily2;
+      font-size:clamp(0.7rem,2vw,1rem);
+      color:#414042;
+    }
+
+    }
   }
 }
