removed the explicit width and height of the svg

--- a/src/Pages/Services/Services.scss
+++ b/src/Pages/Services/Services.scss
@@ -1,33 +1,98 @@
 @import "../../components/Utils/config.scss";
-.service-container{
+.service-container {
+  
+  h2 {
+    color: #f8f9fa;
+    
+  }
+  .svg-container{
     position: relative;
-    background-color:$tertiaryColor;
-    height:50vh;
-    font-family: $fontfmily1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    h2{
-        color:#F8F9FA;
-    }
-    .custom-shape-divider-top-1653762327 {
-        position: absolute;
-        top: 50vh;
-        left: 0;
-        width: 100%;
-        overflow: hidden;
-    line-height: 0;
-}
+  background-color: $tertiaryColor;
+  height: 50vh;
+  font-family: $fontfmily1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .custom-shape-divider-top-1653762327 {
+      position: absolute;
+      // top:-55px;
+      left: 0;
+      width: 100%;
+      overflow: hidden;
+      line-height: 0;
+  }
 
-.custom-shape-divider-top-1653762327 svg {
+  .custom-shape-divider-top-1653762327 svg {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 75px;
-}
+    // z-index:-10;
+    z-index:-10;
+  }
 
-.custom-shape-divider-top-1653762327 .shape-fill {
-    fill: #252C33;
+  .custom-shape-divider-top-1653762327 .shape-fill {
+    fill: #252c33;
+  }
+
 }
+  .cardsDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 2rem 0;
+    @media (max-width: 650px) {
+        flex-direction: column;
+        justify-content: space-evenly;
     }
+    .MuiCardActionArea-root {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      @media (min-width: 650px) {
+        width: 160px;
+      }
+      @media (min-width: 768px) {
+        width: 220px;
+      }
+      @media (min-width: 1024px) {
+        width: 300px;
+      }
+    }
+    .MuiCard-root {
+      box-shadow: none;
+      background: #ffffff;
+      border-radius:1rem;
+      @media (min-width:1024px){
+        border-radius: 2rem;  
+      }
+      .MuiCardMedia-root {
+        border-radius: none;
+        object-position: center;
+        @media (min-width: 650px) {
+          height: 106px;
+        }
+        @media (min-width: 768px) {
+          height: 146px;
+          border-radius: 1rem;
+        }
+        @media (min-width: 1024px) {
+          height: 190px;
+          border-radius: 2rem;
+        }
+      }
+    }
+    .MuiTypography-h5 {
+      font-family: $fontfamily2;
+      font-size: clamp(1rem, 2vw, 2rem);
+      color: #414042;
+      font-weight: 500;
+    }
+    .MuiTypography-body2 {
+      font-family: $fontfamily2;
+      font-size: clamp(0.7rem, 2vw, 1rem);
+      color: #414042;
+    }
+  }
+}
