--- a/src/Pages/Services/Services.scss
+++ b/src/Pages/Services/Services.scss
@@ -1,6 +1,6 @@
 @import "../../components/Utils/config.scss";
 .service-container {
-  
+  background-color: #88868a1c;  
   h2 {
     color: #f8f9fa;
     
@@ -8,7 +8,7 @@
   .svg-container{
   position: relative;
   background-color: $tertiaryColor;
-  height: 50vh;
+  height: 30vh;
   font-family: $fontfmily1;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   justify-content: center;
   .custom-shape-divider-top-1653762327 {
       position: absolute;
-      top:50vh;
+      top:-50vh;
       left: 0;
       width: 100%;
       overflow: hidden;
@@ -48,10 +48,11 @@
     .MuiCard-root {
       box-shadow: none;
       background: #ffffff;
-      border-radius:1rem;
+      border-radius:2.6rem;
       @media (min-width:1024px){
         border-radius: 2rem;  
       }
+      margin: 2rem 0; 
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -99,6 +100,29 @@
     }
   }
 }
-.cardsDiv:nth-child(2n+1){
-  
+.cardExpandSection{
+  display:grid;
+  justify-content: space-between;
+  align-items: center;
+  grid-template-columns: 0.45fr 0.45fr 0.1fr  ;
+  padding:2rem;
+  background:#FFFFFF;
+  border-radius: 2rem;
+  p{
+    font-size: clamp(0.4rem,2vw,0.7rem);
+    grid-column: 1/5;
+    text-align: left;
+    @media(min-width:768px){
+      grid-column: 1/3;
+    }
+  }
+  img{
+    grid-column:1/5;
+    height:400px;
+    width:auto;
+    @media(min-width:768px){
+      grid-column: 4/5;  
+      height:400px;
+    }
+  }
 }
