linked logo to main page, minute section chane sin faq and referals

--- a/src/Pages/Referrals/Referrals.scss
+++ b/src/Pages/Referrals/Referrals.scss
@@ -4,7 +4,7 @@
     .svg-container{
         color:$textColor1 ;
         position: relative;
-        background-color: $tertiaryColor;
+        background-color: #30363c;
         height: 30vh;
         font-family: $fontfmily1;
         display: flex;
