--- a/src/Pages/FAQ/FAQ.scss
+++ b/src/Pages/FAQ/FAQ.scss
@@ -1,33 +1,50 @@
 @import "../../components/Utils/config.scss";
-.Faq-container{
-    position: relative;
-    background-color:$tertiaryColor;
-    height:50vh;
-    font-family: $fontfmily1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    h2{
-        color:#F8F9FA;
+.faq-container{
+    background-color: #88868a1c;    
+    .svg-container{
+        color:$textColor1 ;
+        position: relative;
+        background-color: #30363c;
+        height: 30vh;
+        font-family: $fontfmily1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .custom-shape-divider-top-1653762327 {
+            position: absolute;
+            top:30vh;
+            left: 0;
+            width: 100%;
+            overflow: hidden;
+            line-height: 0;
+        }
+      
+        .custom-shape-divider-top-1653762327 svg {
+          position: relative;
+          display: block;
+          width: calc(100% + 1.3px);
+          // z-index:-10;
+          z-index:-10;
+        }
+      
+        .custom-shape-divider-top-1653762327 .shape-fill {
+          fill: #252c33;
+        }
+      
+      }
+    
+.lowerDivider{
+    padding: 2rem;
+    background: #fff;
+    margin: 2rem;
+    border-radius: 2rem;
+    h3{
+        font-family: $fontfmily1
     }
-    .custom-shape-divider-top-1653762327 {
-        position: absolute;
-        top: 50vh;
-        left: 0;
-        width: 100%;
-        overflow: hidden;
-    line-height: 0;
+    p{
+        font-family: $fontfamily2;
+    }
 }
 
-.custom-shape-divider-top-1653762327 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 75px;
 }
-
-.custom-shape-divider-top-1653762327 .shape-fill {
-    fill: #252C33;
-}
-    }
