some design changes to faq and referals

--- a/src/Pages/FAQ/FAQ.scss
+++ b/src/Pages/FAQ/FAQ.scss
@@ -37,6 +37,8 @@
 .lowerDivider{
     padding: 2rem;
     background: #fff;
+    position: relative;
+    top: -10vh;
     margin: 2rem;
     border-radius: 2rem;
     h3{
