--- a/src/Pages/Referrals/Referrals.scss
+++ b/src/Pages/Referrals/Referrals.scss
@@ -37,6 +37,8 @@
 .lowerDivider{
     padding: 2rem;
     background: #fff;
+    position: relative;
+    top: -10vh;
     margin: 2rem;
     border-radius: 2rem;
     h3{
