--- a/src/Pages/InstructorProfile/InstructorProfile.scss
+++ b/src/Pages/InstructorProfile/InstructorProfile.scss
@@ -7,6 +7,8 @@
     }
     // padding: 0 2rem;
     .instName{
+        display:flex ;
+        
         h3{
             margin:0.2rem 0;
         }
@@ -16,6 +18,54 @@
         p{
 
             margin:0.2rem 0;
+        }
+        // margin-right: 6rem;
+    }
+
+    .grids{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        .span-1{
+            grid-column:1/4;
+            @media (min-width:1024px){
+                grid-column:1/3;
+                grid-row:1/2;
+            }
+        }
+        .span-2{
+            grid-column:1/4;
+            @media(min-width:1024px){
+                grid-column:3/4;
+                grid-row:1/3;
+            }
+        }
+        .span-3{
+            grid-column:1/4;
+            @media(min-width:1024px){
+                grid-column:1/3;
+                grid-row:2/3;
+            }
+        }
+        .span-4{
+            grid-column:1/4;
+            @media(min-width:1024px){
+                grid-column:3/4;
+                grid-row:3/4;
+            }
+        }
+        .span-5{
+            grid-column:1/4;
+            @media(min-width:1024px){
+                grid-column:1/3;
+                grid-row:3/4;
+            }
+        }
+        .span-6{
+            grid-column:1/4;
+            @media(min-width:1024px){
+                grid-column:1/3;
+                grid-row:4/5;
+            }
         }
     }
 }
