--- a/src/Pages/InstructorProfile/InstructorProfile.scss
+++ b/src/Pages/InstructorProfile/InstructorProfile.scss
@@ -27,20 +27,43 @@
         grid-template-columns: repeat(3,1fr);
         .span-1{
             grid-column:1/4;
-            @media (min-width:1024px){
+            @media (min-width:900px){
                 grid-column:1/3;
                 grid-row:1/2;
             }
         }
         .span-2{
             grid-column:1/4;
-            @media(min-width:1024px){
+            @media(min-width:768px){
+                grid-column:3/4;
+                grid-row:5/6;
+            }
+            @media(min-width:900px){
                 grid-column:3/4;
                 grid-row:1/3;
+            }
+            .MuiImageList-root{
+                width:80%;
+                @media (min-width:768px){
+                    width:300px;
+                    height:300px;
+                }
+                @media (min-width:1024px){
+                    width:400px;
+                    height:400px;
+                }
             }
         }
         .span-3{
             grid-column:1/4;
+            @media(min-width:768px){
+                grid-column:1/4;
+                grid-row:2/3;
+            }
+            @media(min-width:900px){
+                grid-column:1/3;
+                grid-row:2/3;
+            }
             @media(min-width:1024px){
                 grid-column:1/3;
                 grid-row:2/3;
@@ -48,6 +71,10 @@
         }
         .span-4{
             grid-column:1/4;
+            @media(min-width:768px){
+                grid-column:1/3;
+                grid-row:5/6;
+            }
             @media(min-width:1024px){
                 grid-column:3/4;
                 grid-row:3/4;
@@ -55,6 +82,9 @@
         }
         .span-5{
             grid-column:1/4;
+            @media(min-width:768px){
+                grid-row:3/4;
+            }
             @media(min-width:1024px){
                 grid-column:1/3;
                 grid-row:3/4;
@@ -62,6 +92,9 @@
         }
         .span-6{
             grid-column:1/4;
+            @media(min-width:768px){
+                grid-row:4/5;
+            }
             @media(min-width:1024px){
                 grid-column:1/3;
                 grid-row:4/5;
