added profile link

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -29,6 +29,8 @@
   }
 
   .logSign-Desktop {
+    display: flex;
+    align-items: center;
       margin-right:2rem;
     a {
       margin: 0 0.5rem;
