made changes to how instrcutor profile gets visible

--- a/src/Pages/InstructorProfile/InstructorProfile.scss
+++ b/src/Pages/InstructorProfile/InstructorProfile.scss
@@ -1,7 +1,7 @@
 
 .Instrcutor-container{
     .backgroundPicture{
-        background: url("../../Assets/Profiles/Profile\ Background.png") center/cover;
+        background: url("../../../public/images/Profile\ Background.png") center/cover;
         height: 50vh;
 
     }
