--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -22,6 +22,13 @@
 
     a {
       margin: 0 0.5rem;
+      padding:0.5rem 0.5rem;
+      border-radius: 4px;
+    }
+    a.active{
+      color:#000;
+      background-color: $textColor1;
+
     }
     @media (max-width: 768px) {
       display: none;
